--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>WebStudio</title>
   </head>
   <body>
-    <h1>Salut!</h1>
+  <!--Header - HERO?-->
+    <header>
+      <a href="index.html"></a>
+        <img src="images/webstudio.png" alt="logo-webstudio"/>
+        <nav>
+          <ul>
+            <li><a href="studio.html">Studio</a></li>
+            <li><a href="portofolio.html">Portofolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+12127724150">+1 212-772-4150</a>
+    </header>
+  <!--Main section-->
+    <main>
+  <!--top section-->
+      <section>
+        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button>Request our service</button>
+      </section>
+  <!--about us section-->
+      <section>
+        <div>
+          <h6>ATTENTION TO DETAILS</h6>
+          <p>We go into all the details and processes of your business to develop a customized solution.</p>
+          <h6>PUNCTUALITY</h6>
+          <p>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
+          <h6>PLANNING</h6>
+          <p>You will be able to observe and participate in every phase of solution development and implementation.</p>
+          <h6>MODERN TECHNOLOGIES</h6>
+          <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+        </div>
+          <h2>What we do</h2>
+          <div>
+            <img src="images/what-we-do-1.jpg" alt="service-1">
+            <img src="images/what-we-do-2.jpg" alt="service-2">
+            <img src="images/what-we-do-3.jpg" alt="service-3">
+          </div>
+      </section>
+  <!--our team section-->
+      <section>
+        <h2>Our Team</h2>
+        <div>
+          <div>
+            <img src="images/christopher-walker.jpg" alt="christopher-walker">
+            <p><b>Christopher Walker</b></p>
+            <p>Product Designer</p>
+          </div>
+          <div>
+            <img src="images/kylie-evans.jpg" alt="kylie-evans">
+            <p><b>Kylie Evans</b></p>
+            <p>Frontend Developer</p>
+          </div>
+          <div>
+            <img src="images/ryan-harris.jpg" alt="ryan-harris">
+            <p><b>Ryan Harris</b></p>
+            <p>Marketing</p>
+          </div>
+          <div>
+            <img src="images/tyler-moore.jpg" alt="tyler-moore">
+            <p><b>Tyler Moore</b></p>
+            <p>UI Designer</p>
+          </div>
+        </div>
+      </section>
+    <!--footer-->
+      <footer>
+        <img src="images/web-studio-white.jpg" alt="logo-webstudio-white">
+        <p><b>695 Park Ave, NY 10065, USA</b></p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+        <a href="tel:+12127724150">+1 212-772-4150</a>
+      </footer>
+    </main>
   </body>
 </html>
