--- a/index.html
+++ b/index.html
@@ -26,30 +26,29 @@
       <!--top section-->
       <section>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button>Request our service</button>
+        <button type="button">Request our service</button>
       </section>
       <!--about us section-->
       <section>
         <div>
           <h6>ATTENTION TO DETAILS</h6>
           <p>
-            We go into all the details and processes of your business to develop
-            a customized solution.
+            We go into all the details and processes of your business to develop a customized
+            solution.
           </p>
           <h6>PUNCTUALITY</h6>
           <p>
-            With us, you can feel safe and secure. An important principle of the
-            company: respect your time and deadlines.
+            With us, you can feel safe and secure. An important principle of the company: respect
+            your time and deadlines.
           </p>
           <h6>PLANNING</h6>
           <p>
-            You will be able to observe and participate in every phase of
-            solution development and implementation.
+            You will be able to observe and participate in every phase of solution development and
+            implementation.
           </p>
           <h6>MODERN TECHNOLOGIES</h6>
           <p>
-            We use innovative tools to solve assigned tasks. It's time to
-            simplify work processes.
+            We use innovative tools to solve assigned tasks. It's time to simplify work processes.
           </p>
         </div>
         <h2>What we do</h2>
