--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Header - HERO?-->
     <header>
       <a href="index.html"></a>
-      <img src="images/webstudio.png" alt="logo-webstudio" />
+      <img src="images/webstudio.png" width="145px" height="31px" alt="logo-webstudio" />
       <nav>
         <ul>
           <li><a href="studio.html">Studio</a></li>
@@ -53,9 +53,9 @@
         </div>
         <h2>What we do</h2>
         <div>
-          <img src="images/what-we-do-1.jpg" alt="service-1" />
-          <img src="images/what-we-do-2.jpg" alt="service-2" />
-          <img src="images/what-we-do-3.jpg" alt="service-3" />
+          <img src="images/what-we-do-1.jpg" width="370px" height="294px" alt="service-1" />
+          <img src="images/what-we-do-2.jpg" width="370px" height="294px" alt="service-2" />
+          <img src="images/what-we-do-3.jpg" width="370px" height="294px" alt="service-3" />
         </div>
       </section>
       <!--our team section-->
@@ -63,22 +63,27 @@
         <h2>Our Team</h2>
         <div>
           <div>
-            <img src="images/christopher-walker.jpg" alt="christopher-walker" />
+            <img
+              src="images/christopher-walker.jpg"
+              width="270px"
+              height="260px"
+              alt="christopher-walker"
+            />
             <p><b>Christopher Walker</b></p>
             <p>Product Designer</p>
           </div>
           <div>
-            <img src="images/kylie-evans.jpg" alt="kylie-evans" />
+            <img src="images/kylie-evans.jpg" width="270px" height="260px" alt="kylie-evans" />
             <p><b>Kylie Evans</b></p>
             <p>Frontend Developer</p>
           </div>
           <div>
-            <img src="images/ryan-harris.jpg" alt="ryan-harris" />
+            <img src="images/ryan-harris.jpg" width="270px" height="260px" alt="ryan-harris" />
             <p><b>Ryan Harris</b></p>
             <p>Marketing</p>
           </div>
           <div>
-            <img src="images/tyler-moore.jpg" alt="tyler-moore" />
+            <img src="images/tyler-moore.jpg" width="270px" height="260px" alt="tyler-moore" />
             <p><b>Tyler Moore</b></p>
             <p>UI Designer</p>
           </div>
@@ -86,8 +91,13 @@
       </section>
       <!--footer-->
       <footer>
-        <img src="images/web-studio-white.jpg" alt="logo-webstudio-white" />
-        <p><b>695 Park Ave, NY 10065, USA</b></p>
+        <img
+          src="images/web-studio-white.jpg"
+          width="145px"
+          height="31px"
+          alt="logo-webstudio-white"
+        />
+        <address>695 Park Ave, NY 10065, USA</address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tel:+12127724150">+1 212-772-4150</a>
       </footer>
